<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment3">


    <Button
        android:id="@+id/pressed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnFrag3"
        app:backgroundTint="@null"
        android:background="@drawable/btnvariant"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        >

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn"
            android:text="@string/btn1"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            android:layout_marginRight="24dp"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/back_btn"
            android:text="@string/btn2"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>
        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/back_btn"
            android:text="@string/btn3"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>